--- a/framegear/package.json
+++ b/framegear/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@coinbase/onchainkit": "^0.8.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "graphql-request": "^6.1.0",
     "jotai": "^2.6.4",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "viem": "^2.7.13",
     "yup": "^1.3.3"
   },
   "devDependencies": {
